# test-new-saas-version

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  API_ENDPOINT_TROUBLESHOOTING.md  Dockerfile.web  FILE_PROCESSING_ERROR_FIX.md  FIX_VOLUME_ISSUE.md  LICENSE.md  MEDIA_STORAGE_FIX.md  Makefile  README.md  SOFTWARE_SURVEY_FEATURE.md  TESTING.md  bug.md  check_service_name.py  docker-compose.yml  docker_startup.sh  fly.toml  generate_secret_key.py  manage.py  package.json  pegasus-config.yaml  processed_file.py  pyproject.toml  start_all.sh  template.html  test_api_endpoint.sh  upload_env_vars.py  vite.config.ts
.github/workflows/: deploy.yml  security.yml  tests.yml
api-client/: runtime.ts
api-client/apis/: PegasusApi.ts
api-client/models/: AggregateEmployeeData.ts  DepartmentEnum.ts  Employee.ts  PaginatedEmployeeList.ts  PatchedEmployee.ts
apps/chat/: consumers.py  context_processors.py  routing.py  tasks.py  urls.py  views.py
apps/ecommerce/: admin.py  helpers.py  models.py  urls.py  views.py  webhooks.py
apps/services/: __init__.py  admin.py  decorators.py  forms.py  helpers.py  (+4 more)
docs/: AUTOMATIC_SUBSCRIPTION_SYNC.md  DEMO_REQUEST_APPROVAL_FEATURE.md  FILE_STORAGE_FIX.md  FONT_AWESOME_ICONS_REFERENCE.md  IMPLEMENTATION_PRODUCT_DEMO_LINKS.md  IMPLEMENTATION_SUMMARY.md  MAILERSEND_SETUP.md  MANAGEMENT_COMMANDS_GUIDE.md  MIGRATION_TO_USER_PROGRAMS.md  PRODUCT_DEMO_LINKS_GUIDE.md  ROTATING_TEXT_FEATURE.md  SUBSCRIPTION_FEATURES_GUIDE.md  SUBSCRIPTION_REQUEST_FEATURE.md  SUBSCRIPTION_REQUEST_TROUBLESHOOTING.md  SUBSCRIPTION_SYNC_GUIDE.md  TESTING_GUIDE.md  USER_TEMPLATE_STRUCTURE.md  WELCOME_EMAIL_SETUP.md
test/: asgi.py  celery.py  channels_urls.py  settings.py  settings_production.py  urls.py  wsgi.py
user_programs/: .gitignore  README.md
(+125 files in other folders)
